[package]
name = "zero2axum"
authors = ["Matt Jackson <matt@jacksonsix.com>"]
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2axum"
path = "src/main.rs"

[dependencies]
axum = "0.6.16"
color-eyre = "0.6.2"
config = "0.13.3"
hyper = { version = "0.14.26", features = ["full"] }
sentry = { version = "0.31.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tracing-test = "0.2.4"

[dev-dependencies]
httpc-test = "0.1.1"
reqwest = "0.11.16"
rstest = "0.17.0"

[features]
ci = []
