[package]
name = "zero2axum"
authors = ["Matt Jackson <matt@jacksonsix.com>"]
version = "0.1.4"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2axum"
path = "src/main.rs"

[dependencies]
axum = "0.6.16"
color-eyre = "0.6.2"
config = "0.13.3"
hyper = { version = "0.14.26", features = ["full"] }
sentry = { version = "0.31.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb/", branch = "main" }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "registry", "env-filter"] }
tracing-test = "0.2.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
strum_macros = "0.24.3"
surrealdb-migrations = "0.9.5"
opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.2.0"

[dev-dependencies]
httpc-test = "0.1.1"
once_cell = "1.17.1"
reqwest = "0.11.16"
rstest = "0.17.0"

[features]
ci = []

[profile.release]
debug = 1
opt-level = "z"
lto = true
