[package]
name = "zero2axum"
authors = ["Matt Jackson <matt@jacksonsix.com>"]
version = "0.1.9"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2axum"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
color-eyre = "0.6.2"
config = "0.13.3"
hyper = { version = "0.14.26", features = ["full"] }
sentry = { version = "0.31.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb/", branch = "main" }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
strum_macros = "0.24.3"
surrealdb-migrations = { version = "=0.9.5" }
opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
rand = { version = "0.8.5", features = ["std_rng"] }
axum-macros = "0.3.7"
anyhow = "1.0.71"
futures-core = "0.3.28"
thiserror = "1.0.40"
base64 = "0.21.2"
sha3 = "0.10.8"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.1"
httpc-test = "0.1.1"
linkify = "0.9.0"
once_cell = "1.17.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = "0.17.0"
serde_json = "1.0.96"
wiremock = "0.5.18"
tracing-test = "0.2.4"
fake = "2.6.1"

[features]
ci = []

[profile.release]
debug = 1
opt-level = "z"
lto = true
